# pickledbg

./: .gitignore  Changelog.md  LICENSE  README.md  compare.py  pickledbg.py  pyproject.toml
examples/: README.md  helloworld.pickle  sickle.pickle  snek.pickle
src/: colors.py  errors.py  opcodes.py  picklecomp.py  pickledbg.py  util.py
