[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pickledbg"
version = "2.2.0"
authors = [
  { name="Legoclones" },
]
description = "A GDB+GEF-style debugger, where pickles are unpacked instruction by instruction"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/Legoclones/pickledbg"
Issues = "https://github.com/Legoclones/pickledbg/issues"

[project.scripts]
pickledbg = "pickledbg:main"